[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fb8"
dynamic = ["version"]
authors = [
  {name = "Tianlu Yuan", email = "tyuan@icecube.wisc.edu"},
  {name = "Daniël Fraenkel", email = "e.d.fraenkel@gmail.com"},
  {name = "Austin Schneider", email = "aschn@mit.edu"},
]
maintainers = [
  {name = "Tianlu Yuan", email = "tyuan@icecube.wisc.edu"}
]

description = "Implementation of FB8, a generalization of the Kent (1982) and Bingham-Mardia (1978) distributions on a sphere"
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">= 3.9"
dependencies = [
  "numpy >= 1.17",
  "scipy >= 1.4"
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.2", "healpy"]

[project.urls]
Repository = "https://github.com/tianluyuan/sphere.git"

[tool.setuptools.packages.find]
exclude = ["paper*", "fig*", "build*"]

[tool.setuptools_scm]
